Remove various code smells.